# cocotbext-i2c

./: README.md  setup.cfg
cocotbext/i2c/: __init__.py  i2c_device.py  i2c_master.py  i2c_memory.py
tests/i2c/: Makefile  results.xml  test_i2c.py  test_i2c.v
tests/i2c/sim_build/: sim.vvp
tests/i2c_tri1/: Makefile  test_i2c.py  test_i2c.v
